fix css alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,7 @@ p {
   height: 80px;
   padding: 10px;
   display: flex;
+  align-items: center;
   box-sizing: border-box;
 }
 
